[package]
name = "swizzy_decent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
phf = "0.11.2"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
env_logger = "0.11.3"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"