[package]
name = "swizzy_decent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
phf = "0.11.2"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"] }
env_logger = "0.11.3"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"# Globals
# Http web
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
json = "0.12.4"